Fix body overflow in Chrome when there is download bar

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: black;
+  overflow: hidden;
 }
 .terminal {
   font-weight: bold;
